# gamev1

./: .gitattributes  .gitignore  ALPHA-RELEASE-GUIDE.md  BETA-TESTING-GUIDE.md  CLIENT-SETUP-GUIDE.md  COMPLETE-3D-GAME-FIX-GUIDE.md  COMPREHENSIVE-FIX-GUIDE.md  CREATE-COLLECTIONS-GUIDE.md  Cargo.toml  FINAL-COMPREHENSIVE-FIX-GUIDE.md  FINAL-COMPREHENSIVE-SOLUTION.md  FINAL-FIX-GUIDE.md  GAME-ROUTE-FIX-GUIDE.md  GAMEPLAY-TEST-GUIDE.md  NODEJS-INSTALL-GUIDE.md  QUICK-FIX-GUIDE.md  QUICK-START-GUIDE.md  QUICK-START-V2.md  QUICK-START.md  README-QUICK-START.md  README.md  START-GUIDE-PRINT.md  STARTUP-GUIDE.md  TAO-CSDL-TU-DONG-CHI-TIET.md  TROUBLESHOOTING-GUIDE.md  ULTIMATE-FIX-GUIDE.md  VAN-DE-DA-SUA.md  auth.json  basic-test.ps1  check-services.ps1  check-status.bat  cleanup-unused-files.ps1  comprehensive_test.error  final-comprehensive-test.ps1  final-optimized-test.ps1  final-test.ps1  final_optimized_test.error  fix-game-simple.ps1  fix-game.ps1  monitor-logs.bat  (+55 more)
client/: .gitignore  README.md  package-lock.json  package.json  run-client.bat  start-client.bat  svelte.config.js  tsconfig.json  vite.config.ts
client/src/: app.css  app.html
client/src/assets/: worker.proto
client/src/lib/: transport.ts
client/src/lib/components/: EndlessRunner3D.svelte  GameRenderer.svelte  Login.svelte  NetworkMetrics.svelte  RoomBrowser.svelte  SimpleGame.svelte  SimpleRunner.svelte  SpectatorView.svelte  UserProfile.svelte  ValidationErrors.svelte
client/src/lib/stores/: auth.ts  game.ts  input.ts  room.ts  transport.ts  types.ts  webrtc.ts
client/src/lib/transport/: enhanced-websocket.ts  negotiator.ts  webrtc-transport.ts  webtransport-client.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/game/: +page.svelte  TestComponent.svelte
client/src/routes/game-test/: +page.svelte
client/src/routes/net-test/: +page.svelte
client/src/routes/rooms/: +page.svelte
client/src/routes/spectator/: +page.svelte
client/src/routes/transport-test/: +page.svelte
common-net/: Cargo.toml  README.md
common-net/src/: cache.rs  compression.rs  database.rs  lib.rs  load_balancer.rs  matchmaking.rs  message.rs  metrics.rs  quantization.rs  shutdown.rs  snapshot.rs  telemetry.rs
common-net/src/transport/: high_concurrency.rs  manager.rs  metrics.rs  mod.rs  mod.rs.bak  traits.rs  webrtc.rs  ws.rs  ws.rs.bak
docs/: transport-roadmap.md
gateway/: Cargo.toml  README.md  lib_clean.rs
gateway/src/: auth.rs  lib.rs  main.rs  transport.rs  types.rs  webrtc.rs  worker_client.rs
gateway/tests/: http_ws.rs
pb_data/: auxiliary.db  data.db
pocketbase/: Cargo.toml
pocketbase/pb_data/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db  data.db-shm  data.db-wal
pocketbase/pb_migrations/: 1759370067_created_gamev1.js  1759370110_updated_gamev1.js  1759370140_updated_users.js  1759370829_created_user_max.js  1759373012_deleted_eneegy.js  1759373021_deleted_user_max.js  1759399999_create_game_collections.js  1759400000_add_sample_data.js  1759400001_fix_collections.js  1759463981_created_users.js
pocketbase/src/: lib.rs
proto/: Cargo.toml  README.md  build.rs  worker.proto
proto/src/: lib.rs
room-manager/: Cargo.toml  README.md
room-manager/src/: lib.rs  main.rs
room-manager/tests/: metrics.rs
scripts/: README.md  basic-collections-clean.ps1  basic-collections.ps1  common.ps1  create-auth-collections.ps1  create-game-collections-clean.ps1  create-game-collections.ps1  database-schema.sql  deploy-alpha.sh  export-pocketbase-data.ps1  import-postgresql.ps1  migrate-to-postgresql.ps1  migration-strategy.md  run-dev.ps1  run-dev.sh  run-migration-demo.ps1  run-orchestrator.ps1  run-orchestrator.sh  run-service.ps1  run-service.sh  service-manager.ps1  setup-database-environment.ps1  setup-pocketbase-collections.ps1  setup-pocketbase.ps1  setup-pocketbase.sh  simple-create-collections-clean.ps1  simple-create-collections.ps1  stop-all.bat  stop-dev.ps1  test-pocketbase-connection.ps1  transform-data.ps1  validate-migration.ps1
server/: Cargo.toml  README.md  server-settings.sample.json
server/src/: lib.rs  main.rs
server/tests/: chaos.rs  smoke.rs
services/: Cargo.toml  README.md  collections.json
services/src/: api.rs  collections.rs  jobs.rs  lib.rs  main.rs  persistence.rs
worker/: Cargo.toml  README.md
worker/src/: database.rs  lib.rs  main.rs  room.rs  rpc.rs  simulation.rs  snapshot.rs  validation.rs
worker/tests/: metrics.rs  simulation.rs
