[workspace]
members = [
    "common-net",
    "gateway",
    "worker",
    "room-manager",
    "server",
    "proto",
    "services"
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = { version = "0.6", features = ["macros", "ws", "tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "signal"] }
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
prometheus = "0.13"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.11", features = ["transport"] }
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"
