[package]
name = "common-net"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["webrtc", "compression"]
webrtc = ["dep:webrtc", "tokio-util", "bytes"]
compression = ["lz4_flex", "zstd", "snap", "thiserror"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
hyper = "0.14"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# WebRTC dependencies (optional for advanced features)
webrtc = { version = "0.9", optional = true }
tokio-util = { version = "0.7", optional = true }
bytes = { version = "1.0", optional = true }

# Compression dependencies for network optimization
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }
snap = { version = "1.1", optional = true }
thiserror = { version = "1.0", optional = true }