[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[features]
default = []
quic = ["wtransport"]
wallet_disabled = []

[dependencies]
anyhow = "1"
axum = { workspace = true }
bytes = "1"
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }
tower_governor = "0.6"  # rate limiting
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# gRPC client – KHÔNG TLS
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, default-features = false, features = ["transport"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# proto nội bộ
proto = { path = "../proto" }
common-net = { path = "../common-net" }
prometheus = "0.13"
once_cell = "1"
futures = "0.3"
async-trait = "0.1"
wtransport = { version = "0.5", optional = true }  # WebTransport/QUIC
rcgen = "0.13"  # self-signed certificates

# JWT Authentication
jsonwebtoken = "9"          # JWT encoding/decoding
ed25519-dalek = "2"         # Ed25519 signature verification
base64 = "0.22"             # Base64 encoding/decoding
chrono = { version = "0.4", features = ["serde"] }  # Timestamp
rand = "0.8"                # Random nonce generation
uuid = { version = "1.0", features = ["v4", "serde"] }  # Unique IDs
bs58 = "0.5"                # Base58 encoding/decoding cho Solana addresses
thiserror = "1.0"           # Error handling
# quinn = "0.11"  # QUIC thuần - dùng sau khi fix wtransport

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.24" }
hyper = "0.14"
worker = { path = "../worker" }

