[package]
name = "room-manager"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common-net = { path = "../common-net" }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
