[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
common-net = { path = "../common-net" }
gateway = { path = "../gateway" }
room-manager = { path = "../room-manager" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
worker = { path = "../worker" }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
