[package]
name = "worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common-net = { path = "../common-net" }
proto = { path = "../proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
