[package]
name = "worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common-net = { path = "../common-net" }
proto = { path = "../proto" }
pocketbase = { path = "../pocketbase" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# ECS và Physics
bevy_ecs = "0.13"
rapier3d = "0.21"
crossbeam = "0.8"

# Database và HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Performance optimizations
dashmap = "6.1"
once_cell = "1.19"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
